--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -160,6 +160,10 @@
   "portfolio": {
     "client": "ลูกค้า",
     "employedBy": "จ้างงานโดย",
+    "disclaimer": {
+      "title": "ข้อจำกัดความรับผิดชอบ!",
+      "message": "พอร์ตโฟลิโอของฉันอยู่ระหว่างการก่อสร้าง รายละเอียดโครงการอาจไม่ถูกต้อง 100% หรือสมบูรณ์ โปรดกลับมาตรวจสอบอีกครั้งในอีกสองสามวัน"
+    },
     "months": {
       "jan": "ม.ค.",
       "feb": "ก.พ.",
