--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -164,6 +164,13 @@
       "title": "ข้อจำกัดความรับผิดชอบ!",
       "message": "พอร์ตโฟลิโอของฉันอยู่ระหว่างการก่อสร้าง รายละเอียดโครงการอาจไม่ถูกต้อง 100% หรือสมบูรณ์ โปรดกลับมาตรวจสอบอีกครั้งในอีกสองสามวัน"
     },
+    "sections": {
+      "theClient": "ลูกค้า",
+      "theStakeholder": "ผู้มีส่วนได้ส่วนเสีย",
+      "theProblem": "ปัญหา",
+      "ourSolution": "โซลูชันของเรา",
+      "technologies": "เทคโนโลยี"
+    },
     "months": {
       "jan": "ม.ค.",
       "feb": "ก.พ.",
